--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
 </head>
 <body>
-        <form id="frmAlumnos">
+    <div class = "container ">
+        <div class="row">
+            <div class=" col-6">
+              <form id="frmAlumnos">
         <div class="card text-bg-dark mb-3" style="max-width: 36rem;">
             <div class="card-header">REGISTRO DE ALUMNOS</div>
             <div class="card-body">
@@ -61,7 +64,28 @@
                 </div>
             </div>
         </div>
-    </form>
+    </form>    
+        </div>
+        <div class="col-6">
+            <table class="table table-hover"id="tblAlumnos">
+                <thead>
+                    <tr>
+                        <th>CODIGO</th>
+                        <th>NOMBRE</th>
+                        <th>DIRECCION</th>
+                        <th>EMAIL</th>
+                        <th>TELEFONO</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+               </table>
+        </div>
+    </div>
+
+
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 <script src="main.js"></script>
 </body>
