Terminacion de CRUD alumnos

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <div class="col-6">
             <table class="table table-hover"id="tblAlumnos">
                 <thead>
+                   <tr>
+                            <th colspan="6">
+                                <input autocomplete="off" type="search" id="txtBuscarAlumno" name="txtBuscarAlumno" placeholder="Buscar alumno" class="form-control">
+                            </th>
+                        </tr>
+                    
                     <tr>
                         <th>CODIGO</th>
                         <th>NOMBRE</th>
