--- a/index.html
+++ b/index.html
@@ -1,154 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Registro de Alumnos</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.min.css"/>
-    <style>
-        .cursor-pointer { cursor: pointer; }
-        .card-header { font-weight: bold; }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" />
 </head>
 <body>
-    <div class="container-fluid mt-4" id="app">
-        <div class="row">
-            <div class="col-md-5">
-                <form @submit.prevent="guardarAlumno" @reset.prevent="limpiarFormulario">
-                    <div class="card text-bg-dark mb-3">
-                        <div class="card-header text-center">REGISTRO DE ALUMNOS</div>
-                        <div class="card-body small">
-                            <div class="row p-1">
-                                <div class="col-4">CÓDIGO:</div>
-                                <div class="col-8"><input required v-model="codigo" type="text" class="form-control form-control-sm"></div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">NOMBRE:</div>
-                                <div class="col-8"><input required v-model="nombre" type="text" class="form-control form-control-sm"></div>
-                            </div>
-
-                            <div class="row p-1">
-                                <div class="col-4">DEPARTAMENTO:</div>
-                                <div class="col-8">
-                                    <select required v-model="departamento" @change="cargarMunicipios" class="form-select form-select-sm">
-                                        <option value="">Seleccione...</option>
-                                        <option v-for="(muni, depto) in datosUbicacion" :value="depto">{{ depto }}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">MUNICIPIO:</div>
-                                <div class="col-8">
-                                    <select required v-model="municipio" @change="cargarDistritos" class="form-select form-select-sm" :disabled="!departamento">
-                                        <option value="">Seleccione...</option>
-                                        <option v-for="m in municipios" :value="m">{{ m }}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">DISTRITO:</div>
-                                <div class="col-8">
-                                    <select required v-model="distrito" class="form-select form-select-sm" :disabled="!municipio">
-                                        <option value="">Seleccione...</option>
-                                        <option v-for="d in distritos" :value="d">{{ d }}</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="row p-1">
-                                <div class="col-4">DIRECCIÓN:</div>
-                                <div class="col-8"><input required v-model="direccion" type="text" class="form-control form-control-sm"></div>
-                            </div>
-
-                            <div class="row p-1">
-                                <div class="col-4">TELÉFONO:</div>
-                                <div class="col-8"><input required v-model="telefono" @input="formatearTelefono" placeholder="0000-0000" type="text" class="form-control form-control-sm"></div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">FECHA NAC.:</div>
-                                <div class="col-8"><input required v-model="fechaNacimiento" type="date" class="form-control form-control-sm"></div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">SEXO:</div>
-                                <div class="col-8">
-                                    <select required v-model="sexo" class="form-select form-select-sm">
-                                        <option value="">Seleccione...</option>
-                                        <option v-for="s in sexos" :value="s">{{ s }}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row p-1">
-                                <div class="col-4">EMAIL:</div>
-                                <div class="col-8"><input required v-model="email" type="email" class="form-control form-control-sm"></div>
-                            </div>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-primary me-2">GUARDAR</button>
-                            <button type="reset" class="btn btn-warning">NUEVO</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <div class="col-md-7">
-                <div class="row mb-2">
-                    <div class="col-7">
-                        <input type="search" v-model="busqueda" placeholder="Buscar alumno..." class="form-control">
-                    </div>
-                    <div class="col-5">
-                        <select v-model="mesFiltro" class="form-select">
-                            <option value="">Filtrar por Mes (Todos)</option>
-                            <option value="01">Enero</option>
-                            <option value="02">Febrero</option>
-                            <option value="03">Marzo</option>
-                            <option value="04">Abril</option>
-                            <option value="05">Mayo</option>
-                            <option value="06">Junio</option>
-                            <option value="07">Julio</option>
-                            <option value="08">Agosto</option>
-                            <option value="09">Septiembre</option>
-                            <option value="10">Octubre</option>
-                            <option value="11">Noviembre</option>
-                            <option value="12">Diciembre</option>
-                        </select>
+    <div id="app">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">::.. SISTEMA ACADEMICO ..::</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="#" @click="abrirVentana('alumnos')">Alumnos</a>
+                        <a class="nav-link" href="#" @clik="abrirVentana('materias')">Materias</a>
+                        <a class="nav-link" href="#" @clik="abrirVentana('docentes')">Docentes</a>
+                        <a class="nav-link" @clik="abrirVentana('inscripciones')">Inscripciones</a>
                     </div>
                 </div>
-
-                <div class="table-responsive border shadow-sm">
-                    <table class="table table-striped table-hover small">
-                        <thead class="table-dark">
-                            <tr>
-                                <th>CÓDIGO</th>
-                                <th>NOMBRE</th>
-                                <th>UBICACIÓN</th>
-                                <th>TELÉFONO</th>
-                                <th>EMAIL</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="alumno in alumnosFiltrados" :key="alumno.codigo" @click="verAlumno(alumno)" class="cursor-pointer">
-                                <td>{{ alumno.codigo }}</td>
-                                <td>{{ alumno.nombre }}</td>
-                                <td>{{ alumno.municipio }}, {{ alumno.departamento }}</td>
-                                <td>{{ alumno.telefono }}</td>
-                                <td>{{ alumno.email }}</td>
-                                <td>
-                                    <button class="btn btn-danger btn-sm" @click.stop="eliminarAlumno(alumno)">DEL</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
             </div>
+        </nav>
+        <div id="appSistema" class="container-fluid">
+            <alumnos :forms="forms" ref="alumnos" v-show="forms.alumnos.mostrar"></alumnos>
+            <busqueda_alumnos v-show="forms.busqueda_alumnos.mostrar"></busqueda_alumnos>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/4.2.0/dexie.min.js"
+        integrity="sha512-LuXLH9xON6/aAGYxi4Z1Dx8588Z80gY3iMmGtUlYmblUc1ulC/cGHuANXIvm8fnIWp5ShUk2MRBIWylGguXF9g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
+    <script src="componentes/alumnos.js"></script>
+    <script src="componentes/busqueda_alumnos.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
